fix: Mobile menu breaks on homepage

--- a/src/assets/scss/DefaultLayout.scss
+++ b/src/assets/scss/DefaultLayout.scss
@@ -58,6 +58,10 @@ body {
         .search-box .search-icon {
             color: $secondary;
         }
+
+        @media (max-width: 768px) {
+            background: #5f6474;
+        }
     }
 }
 
